--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-webview": "13.13.5",
     "uuid": "^11.1.0",
     "expo-file-system": "~18.1.11",
-    "expo-sharing": "~13.1.5"
+    "expo-sharing": "~13.1.5",
+    "expo-mail-composer": "~14.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
